<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#005744"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="24dp"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="P"
            android:textAlignment="viewStart"
            android:textColor="#000000"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="380dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/front_panel"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:srcCompat="@drawable/customborder" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="400dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/front_display"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/wattmetr_108" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="61dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/field_for_avg_power"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/customborder" />

        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="130dp"
            android:layout_height="64dp"
            android:contentDescription="@string/field_for_avg_power"
            android:fontFamily="sans-serif-condensed-medium"
            android:importantForAccessibility="yes"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:ignore="TextSizeCheck"
            tools:text="6.25" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="ср"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif"
            android:text="="
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/resultTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,TextContrastCheck" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="кВт"
            android:textColor="#010101"
            android:textSize="48sp"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText,UnknownId,TextContrastCheck" />

        <TextView
            android:id="@+id/text_na_tablo"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/moskow2024"
            android:text="@string/_2_5"
            android:textColor="#FF1100"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Q="
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="HardcodedText,TextSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/duty_cycle"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:hint="@string/field_borehole"
            android:autofillHints="Введите значение скважности"
            android:background="@drawable/edittext_rounded"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-medium"
            android:inputType="numberDecimal|numberSigned"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="16"
            android:textAlignment="center"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/add_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:backgroundTint="#7A0700"
            android:text="@string/minus_0_1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/add_up"
            app:layout_constraintStart_toEndOf="@+id/duty_cycle"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/add_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="80dp"
            android:backgroundTint="#7A0700"
            android:text="@string/plus_0_1"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/add_down"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/tableTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="#0B3D2E"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/tab_num_1"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/duty_cycle" />

        <HorizontalScrollView
            android:id="@+id/horizontalTableScroll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:background="#D8F3DC"
            android:contentDescription="@string/stroka_hint1"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableTitle">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:shrinkColumns="*"
                android:stretchColumns="*" />
        </HorizontalScrollView>

        <Button
            android:id="@+id/btnSaveSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#1565C0"
            android:text="@string/Record_and_send"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalTableScroll" />

        <Button
            android:id="@+id/btnClearTable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#8E24AA"
            android:text="@string/clear_tab"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSaveSend" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
